--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 					<tr>
 						
 
-						<td><label for="provider">langue: </label></td>
+						<td><label for="provider">Langue: </label></td>
 						<td><select  name="txt_language" id="txt_language" disabled="disabled">
 							<option value="en">en</option>
 							<option value="fr">fr</option>
